Cleaned up code using for loops.  Need to add radio button to each answer choice within for loop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,17 @@
 body{
     background-color: aqua;
 }
+
+
+#questions{
+   font-style: italic;
+   font-weight: bold;
+   margin-top: 20px;
+}
+
+#choices{
+    font-style: normal;
+    font-weight: normal;
+    margin-top: 5px;
+}
+
