--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,29 @@
-.space {
-    margin: 10%;
+h1{
+    font-family: 'Freckle Face', cursive;
 }
+h3{
+    font-weight: bold;
+color: 
+#FDDD3B;
+}  
+
+
+
 
 body{
-    background-color: aqua;
+    background-color: #000000;
+    color: white;
+    font-weight: bolder;
+    margin: 20px 0 20px 20px;
+}
+
+#start{
+    background-color: red;
+    color: #FDDD3B;
+    font-weight: bold;
+    border-radius: 20px;
+    border-color: white;
+    border-width: 2px;
 }
 
 
@@ -14,8 +34,24 @@ body{
 }
 
 #choices{
-    font-style: normal;
+    font-style: italic;
     font-weight: normal;
-    margin-top: 5px;
+    margin: 5px 0 5px 20px;
+    color: #FDDD3B;
 }
 
+img{
+    width: 800px;
+    height: auto;
+    margin: 20px 0 20px 20px;
+}
+
+#timer{
+font-size: 18px;
+    padding: 10px;
+    color: red;
+    background-color: #FDDD3B;
+    margin-bottom: 20px;
+    width: 100%;
+    height: 52px;
+}
