--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,12 @@
 h1{
     font-family: 'Freckle Face', cursive;
+    color: #ED1C24;
 }
+
 h3{
     font-weight: bold;
-color: 
-#FDDD3B;
+color: #FDDD3B;
 }  
-
-
-
 
 body{
     background-color: #000000;
@@ -17,15 +15,17 @@ body{
     margin: 20px 0 20px 20px;
 }
 
-#start{
-    background-color: red;
+#start,
+#submit,
+#reset {
+    background-color: #ED1C24;
     color: #FDDD3B;
     font-weight: bold;
+    margin-bottom: 20px;
     border-radius: 20px;
     border-color: white;
     border-width: 2px;
 }
-
 
 #questions{
    font-style: italic;
@@ -43,13 +43,13 @@ body{
 img{
     width: 800px;
     height: auto;
-    margin: 20px 0 20px 20px;
+    margin: 20px 0 20px 10px;
 }
 
-#timer{
+#timer {
 font-size: 18px;
     padding: 10px;
-    color: red;
+    color: #ED1C24;
     background-color: #FDDD3B;
     margin-bottom: 20px;
     width: 100%;
